--- a/exercicio/aula_001/aula1.html
+++ b/exercicio/aula_001/aula1.html
@@ -1,11 +1,75 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Rodrigo Silva dos Santos</title>
 </head>
+
 <body>
-    
+    <header>
+        <div id="abertura" class="texto">
+            <center>
+                <h1><u>Rodrigo Silva dos Santos</u></h1>
+                <h2>Programa Vem ser TECH</h2>
+                <h3>Trilha Front-End</h3>
+                <hr>
+                <br>
+                <img src="/assets/boas vindas.jpg" alt="foto Rodrigo" width="500" />
+                <br>
+                <br>
+                <hr>
+            </center>
+        </div>
+    </header>
+    <main>
+        <div>
+            <center>
+                <h2>Porque eu escolhi a programação?</h2>
+                <p>
+                    Escolhi a programação como minha carreira de transição após ter tido
+                    contato com ela durante o ensino médio.<br />
+                    Em 2021, com o boom da área de TI, decidi voltar a estudar
+                    programação, com foco no Front-End.<br />
+                    Atualmente, em 2023, estudo e pratico programação praticamente todos
+                    os dias.
+                </p>
+                <br />
+                <hr />
+            </center>
+        </div>
+
+        <div id="info" class="texto">
+            <center>
+                <h3><u>Ficha Técnica</u></h3>
+                <p><b>Ensino Superior:</b> Desenho Industrial</p>
+                <p><b>Localidade:</b> Rio de Janeiro - RJ</p>
+                <p><b>Idade:</b> 42 anos</p>
+                <p><b>Signo:</b> Aries</p>
+                <p><b>Soft Skills:</b> Responsabilidade e comprometimento.</p>
+                <hr />
+                <h3><u>Interesses e Hobbies</u></h3>
+                <p>Lasanha</p>
+                <p>Estudar programação</p>
+                <p>Ouvir Musica</p>
+                <p>Cuidar de plantas</p>
+                <p>Resolver um bug pela manhã</p>
+                <p>Fazer curso de idiomas</p>
+                <p>Fotografar</p>
+                <p><del>Maratonar Séries</del></p>
+                <hr />
+                <hr />
+            </center>
+        </div>
+    </main>
+    <footer>
+        <h3 align="center">
+            Não deixe de me adicionar no
+            <a href="http://linkedin.com/in/dev-rod-santos"><strong>Linkedin</strong></a>
+        </h3>
+    </footer>
+    </div>
 </body>
+
 </html>
