--- a/exercicios/aula_001/aula1.html
+++ b/exercicios/aula_001/aula1.html
@@ -16,7 +16,7 @@
                 <h3>Trilha Front-End</h3>
                 <hr>
                 <br>
-                <img src="/assets/boas vindas.jpg" alt="foto Rodrigo" width="500" />
+                <img src="/exercicios/aula_001/assets/boas vindas.jpg" alt="foto Rodrigo" width="500" />
                 <br>
                 <br>
                 <hr>
