atualizacao da pagina table

--- a/exercicios/aula_002_10/aula2_table.html
+++ b/exercicios/aula_002_10/aula2_table.html
@@ -55,7 +55,9 @@
   </style>
 
   <body>
+    <!-- style="color: red; font-family: Verdana; font-size: 16px;" -->
     
+
 
     <h1>Exercício de Tabelas</h1>
     <table>
