--- a/exercicios/aula_002_10/aula2-desafio.html
+++ b/exercicios/aula_002_10/aula2-desafio.html
@@ -1,11 +1,216 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style_desafio.css" />
+    <script
+      src="https://kit.fontawesome.com/4fac78be48.js"
+      crossorigin="anonymous"
+    ></script>
+    <title>Planejamento Familiar dos Simpsons</title>
+  </head>
+  <body>
+    <section class="family-members">
+      <h2 class="alinha_bookmark">Membros da Família</h2>
+      <div class="div flex">
+        <img
+          class="img_ico bblue"
+          src="assets/img/homer.jpg"
+          alt="imagem homer"
+        />
+        <div class="div border bblue">
+          <h3><i class="icon blue fa-solid fa-bookmark fa-xs"></i>Homer</h3>
+          <!--Jay Simpson-->
+          <p>
+            Sou vegetariano e gosto de cozinhar pratos saudáveis. <br />Eu
+            pratico esportes e preciso de alimentos ricos em proteínas.
+          </p>
+        </div>
+      </div>
+      <div class="div flex">
+        <img
+          class="img_ico bred"
+          src="assets/img/marg.jpg"
+          alt="imagem Marge"
+        />
+        <div class="div border bred">
+          <h3><i class="icon red fa-solid fa-bookmark fa-xs"></i>Marjorie</h3>
+          <!--Bouvier Simpson-->
+          <p>
+            <!-- <span>!</span> -->
+            Sou alérgica a nozes e frutos do mar, mas gosto de comida picante.
+          </p>
+        </div>
+      </div>
+      <div class="div flex">
+        <img
+          class="img_ico bgreen"
+          src="assets/img/bart.jpg"
+          alt="imagem Bart"
+        />
+        <div class="div border bgreen">
+          <h3>
+            <i class="icon green fa-solid fa-bookmark fa-xs"></i>Bartolomew
+          </h3>
+          <!--JoJo Bouvier Simpson-->
+          <p>
+            Estou em fase de crescimento e preciso de lanches saudáveis para
+            levar para a escola.
+          </p>
+        </div>
+      </div>
+      <div class="div flex">
+        <img
+          class="img_ico bpurple"
+          src="assets/img/magie.jpg"
+          alt="imagem Maggie"
+        />
+        <div class="div border bpurple">
+          <h3>
+            <i class="icon purple fa-solid fa-bookmark fa-xs"></i>Elisabeth
+          </h3>
+          <!--Marie Bouvier Simpson-->
+          <p>
+            Eu tenho 10 anos, adoro comida italiana e estou aprendendo a tocar
+            piano.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="shopping-list">
+      <h2 class="alinha_bookmark">Lista de Compras</h2>
+      <article class="div_shopping">
+        <ul>
+            <li>rer</li>
+            <li>aeaseas </li>
+            <li>eqwe</li>
+            <li>gfg</li>
+            <li>kjkjk</li>
+            <li>fd</li>
+            <li>cxc</li>
+            <li>hghg</li>
+            <li>rere</li>
+            <li>nmn</li>
+
+        </ul>
+      </article>
+    </section>
+
+    <section class="todo-list">
+      <h2 class="alinha_bookmark">Lista de Tarefas</h2>
+      <article class="div_todo">
+        <ol><li></li>
+        <li>1</li>
+        <li>2</li>
+        <li>3</li>
+        <li>4</li>
+        <li>5</li>
+        <li>6</li>
+        <li>7</li>
+        <li>8</li>
+        <li>9</li>
+    </ol>
+      </article>
+    </section>
+
+    <table class="tg">
+      <thead>
+        <tr>
+          <th class="tg-lzqt"></th>
+          <th class="tg-lzqt">Segunda</th>
+          <th class="tg-lzqt">Terça</th>
+          <th class="tg-lzqt">Quarta</th>
+          <th class="tg-lzqt">Quinta</th>
+          <th class="tg-lzqt">Sexta</th>
+          <th class="tg-lzqt">Sábado</th>
+          <th class="tg-lzqt">Domingo</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th class="tg-lzqt">Café da Manhã</th>
+          <td class="tg-5w3z">Omelete de Vegetais</td>
+          <td class="tg-5w3z">Aveia com Frutas</td>
+          <td class="tg-5w3z">Torradas de Abacate e Ovos Mexidos</td>
+          <td class="tg-5w3z">Smoothie</td>
+          <td class="tg-5w3z">Tofu Scramble</td>
+          <td class="tg-5w3z" colspan="2">Uma Manhã Italiana</td>
+        </tr>
+        <tr>
+          <th class="tg-lzqt" rowspan="2">Almoço</th>
+          <td class="tg-5w3z">Salada de grãos com legumes grelhados</td>
+          <td class="tg-5w3z">
+            Wraps vegetarianos com folhas verdes, cenoura ralada e molho de
+            thine
+          </td>
+          <td class="tg-5w3z">Tofu stir-fry com legumes e molho teriyake</td>
+          <td class="tg-5w3z">
+            Salada de frango com abacate, milho , tomate e molho de iogurte
+          </td>
+          <td class="tg-5w3z">
+            Arroz integral com grão-de-bico e legumes grelhados
+          </td>
+          <td class="tg-5w3z">
+            Sanduíches de peru com alface, tomate e mostarda
+          </td>
+          <td class="tg-5w3z">Salada de frutas com iogurte e granola</td>
+        </tr>
+        <tr>
+          <td class="tg-5w3z">
+            Frango grelhado com brócolis e purê de batata-doce
+          </td>
+          <td class="tg-5w3z">Salmão assado com aspargos e arroz integral</td>
+          <td class="tg-5w3z">
+            Espaguete de abobrinha com almôndegas vegetarianas
+          </td>
+          <td class="tg-5w3z">Tacos de peixe com repolho roxo e salsa</td>
+          <td class="tg-5w3z">
+            Sopa de lentilha com salada de rúcula e morangos
+          </td>
+          <td class="tg-5w3z">
+            Berinjela grelhada com quinoa e molho de tahine
+          </td>
+          <td class="tg-5w3z">Frango ao curry com arroz basmati</td>
+        </tr>
+        <tr>
+          <th class="tg-lzqt">Lanche</th>
+          <td class="tg-5w3z">Palitos de cenoura</td>
+          <td class="tg-5w3z">Iogurte</td>
+          <td class="tg-5w3z">Fatias de pepino</td>
+          <td class="tg-5w3z">Uvas</td>
+          <td class="tg-5w3z">Smothie com proteina</td>
+          <td class="tg-5w3z" colspan="2">Salada de frutas<br /></td>
+        </tr>
+        <tr>
+          <th class="tg-lzqt" rowspan="2">Jantar</th>
+          <td class="tg-5w3z">
+            Salada de atum com grão-de-bico, pepino e azeitonas
+          </td>
+          <td class="tg-5w3z">Wrap de legumes</td>
+          <td class="tg-5w3z">Salada de macarrão</td>
+          <td class="tg-5w3z">Salada de salmão</td>
+          <td class="tg-5w3z">Wrap de frango com abacate<br /></td>
+          <td class="tg-5w3z">Salmão grelhado com quinoa e aspargos</td>
+          <td class="tg-5w3z">Salada de frango com morangos</td>
+        </tr>
+        <tr>
+          <td class="tg-5w3z">Tofu grelhado</td>
+          <td class="tg-5w3z">Peixe branco</td>
+          <td class="tg-5w3z">Sopa de legumes</td>
+          <td class="tg-5w3z">Frango grelhado com legumes no vapor</td>
+          <td class="tg-5w3z">Tacos de cogumelos</td>
+          <td class="tg-5w3z">Stir-fry</td>
+          <td class="tg-5w3z">Pizza de legumes</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <script src="script_desafio.js"></script>
+
+    <footer>
+      <h3>Página criada para o programa Vem Ser TECH by Ifood.</h3>
+    </footer>
+  </body>
 </html>
