--- a/exercicios/aula_002_10/aula2-desafio.html
+++ b/exercicios/aula_002_10/aula2-desafio.html
@@ -80,20 +80,20 @@
     </section>
 
     <section class="shopping-list">
-      <h2 class="alinha_bookmark">Lista de Compras</h2>
+      <h2>Lista de Compras</h2>
       <article class="div_shopping">
         <ul>
-            <li>rer</li>
-            <li>aeaseas </li>
-            <li>eqwe</li>
-            <li>gfg</li>
-            <li>kjkjk</li>
-            <li>fd</li>
-            <li>cxc</li>
-            <li>hghg</li>
-            <li>rere</li>
-            <li>nmn</li>
-
+          <li><i class="fa-solid fa-square-check" ></i>Leite vegetal</li>
+          <li><i class="fa-regular fa-square" ></i>Frango</li>
+          <li><i class="fa-regular fa-square" ></i>Peixe</li>
+          <li><i class="fa-regular fa-square" ></i>Tofu</li>
+          <li><i class="fa-regular fa-square" ></i>Arroz Integral</li>
+          <li><i class="fa-regular fa-square" ></i>Pizza de Calabresa</li>
+          <li><i class="fa-solid fa-square-check" ></i>Alho</li>
+          <li><i class="fa-solid fa-square-check" ></i>Maçãs</li>
+          <li><i class="fa-solid fa-square-check" ></i>Morangos</li>
+          <li><i class="fa-solid fa-square-check" ></i>Uvas</li>
+          
         </ul>
       </article>
     </section>
@@ -101,17 +101,19 @@
     <section class="todo-list">
       <h2 class="alinha_bookmark">Lista de Tarefas</h2>
       <article class="div_todo">
-        <ol><li></li>
-        <li>1</li>
-        <li>2</li>
-        <li>3</li>
-        <li>4</li>
-        <li>5</li>
-        <li>6</li>
-        <li>7</li>
-        <li>8</li>
-        <li>9</li>
-    </ol>
+        <ol>
+          <li><span>Preparar o café da manhã.</span> </li>
+          <li><span>Estudar piano por 30 minutos.</span></li>
+          <li><span>Levar as crianças para à escola.</span></li>
+          <li><span>Fazer compras de supermercado.</span></li>
+          <li><span>Preparar o almoço</span> </li>
+          <li><span>Pegar as crianças na escola.</span></li>
+          <li><span>Ir para a natação</span></li>
+          <li><span>Cozinhar o jantar</span> </li>
+          <li><span>Ajudar o filho com as lições.</span></li>
+          <li><span>Ajudar a mãe a lavar a louça.</span></li>
+          <li><span>Assistir aula de Forms.</span></li>
+        </ol>
       </article>
     </section>
 
@@ -207,10 +209,13 @@
       </tbody>
     </table>
 
-    <script src="script_desafio.js"></script>
+    
 
     <footer>
       <h3>Página criada para o programa Vem Ser TECH by Ifood.</h3>
     </footer>
+
+
+    <script src="script_desafio.js"></script>
   </body>
 </html>
