--- a/adatech_organizacaofamiliar/index.html
+++ b/adatech_organizacaofamiliar/index.html
@@ -18,17 +18,17 @@
     
     <div class="row">
       
-      <div class="col-6">
+      <div class="col-6 family">
         <section class="family-members">
           <h2>Membros da Família</h2>
           <!-- class div foi usada pra linkar o JS -->
-          <div class="div flex">
+          <div class="div flex content bblue">
             <img
               class="img_ico bblue"
               src="assets/img/homer.jpg"
               alt="imagem homer"
             />
-            <div class="border bblue">
+            <div class="margin_icon">
               <h3><i class="icon blue fa-solid fa-bookmark fa-xs"></i>Homer</h3>
               <!--Jay Simpson-->
               <p>
@@ -37,13 +37,13 @@
               </p>
             </div>
           </div>
-          <div class="div flex">
+          <div class="div flex content bred">
             <img
               class="img_ico bred"
               src="assets/img/marg.jpg"
               alt="imagem Marge"
             />
-            <div class="div border bred">
+            <div class="margin_icon">
               <h3><i class="icon red fa-solid fa-bookmark fa-xs"></i>Marjorie</h3>
               <!--Bouvier Simpson-->
               <p>
@@ -52,13 +52,13 @@
               </p>
             </div>
           </div>
-          <div class="div flex">
+          <div class="div flex content bgreen">
             <img
               class="img_ico bgreen"
               src="assets/img/bart.jpg"
               alt="imagem Bart"
             />
-            <div class="div border bgreen">
+            <div class="margin_icon">
               <h3>
                 <i class="icon green fa-solid fa-bookmark fa-xs"></i>Bartolomew
               </h3>
@@ -69,13 +69,13 @@
               </p>
             </div>
           </div>
-          <div class="div flex">
+          <div class="div flex content bpurple">
             <img
               class="img_ico bpurple"
               src="assets/img/magie.jpg"
               alt="imagem Maggie"
             />
-            <div class="div border bpurple">
+            <div class="margin_icon">
               <h3>
                 <i class="icon purple fa-solid fa-bookmark fa-xs"></i>Elisabeth
               </h3>
@@ -89,8 +89,8 @@
         </section>
       </div>
 
-      <div class="col-3 list">
-        <section class="shopping-list">
+      <div class="col-3 list r">
+        <section class="shopping-list list-content ">
           <h2>Lista de Compras</h2>
           <article class="div_shopping">
             <ul>
@@ -110,7 +110,7 @@
       </div>
 
       <div class="col-3 list">
-        <section class="todo-list">
+        <section class="todo-list list-content">
           <h2 class="alinha_bookmark">Lista de Tarefas</h2>
           <article class="div_todo">
             <ol>
