--- a/exercicios/aula_003/AjudeACausa/index.html
+++ b/exercicios/aula_003/AjudeACausa/index.html
@@ -51,7 +51,7 @@
             <div class="input-box">
               <label>
                 Idade:
-                <input class="xsize" type="number" name="age" placeholder="42" required
+                <input class="xsize" type="number" name="age" min="1" placeholder="42" required
               /></label>
             </div>
 
@@ -62,6 +62,8 @@
                   type="number"
                   name="donation"
                   placeholder="300"
+                  step=".01"
+                  min="1"
                   required
                 />
               </label>
