--- a/exercicios/projeto_001/index.html
+++ b/exercicios/projeto_001/index.html
@@ -1,17 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jewelry Store</title>
-    <link rel="stylesheet" href="/asstes/css/reset.css">
-    <link rel="stylesheet" href="/asstes/css/styles.css">
-</head>
-<body>
-    <header></header>
+    <link rel="stylesheet" href="/asstes/css/reset.css" />
+    <link rel="stylesheet" href="/asstes/css/styles.css" />
+    <link rel="stylesheet" href="/asstes/css/navbar.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Baskervville&family=Fleur+De+Leah&family=Lora:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
+    <script
+      src="https://kit.fontawesome.com/4fac78be48.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <header id="main_header">
+      <div class="logo_area">
+        <img src="/asstes/img/logo-luxury-black.svg" alt="logo da Luxury" />
+      </div>
+      <nav class="nav_main">
+        <ul>
+          <li><a href="">Home</a></li>
+          <li><a href="">About</a></li>
+          <li><a href="">Collection</a></li>
+
+          <li>
+            <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
+          </li>
+          <li>
+            <a href=""><i class="fa-solid fa-cart-shopping"></i></a>
+          </li>
+          <li>
+            <a href=""><i class="fa-solid fa-user"></i></a>
+          </li>
+          <li><a href="">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+    <hr />
     <main></main>
-    <footer>
-        
-    </footer>
-</body>
+    <footer></footer>
+  </body>
 </html>
