update html with main and inside tags

--- a/exercicios/projeto_001/index.html
+++ b/exercicios/projeto_001/index.html
@@ -20,15 +20,17 @@
   </head>
   <body>
     <header id="main_header">
-      <div class="logo_area">
-        <img src="/asstes/img/logo-luxury-black.svg" alt="logo da Luxury" />
-      </div>
+      <img
+        class="logo_area"
+        src="/asstes/img/logo-luxury-black.svg"
+        alt="logo da Luxury"
+      />
+
       <nav class="nav_main">
         <ul>
           <li><a href="">Home</a></li>
           <li><a href="">About</a></li>
           <li><a href="">Collection</a></li>
-
           <li>
             <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
           </li>
@@ -43,7 +45,22 @@
       </nav>
     </header>
     <hr />
-    <main></main>
-    <footer></footer>
+    <main id="main">
+      <aside></aside>
+      <article class="sobre">
+        <h1></h1>
+        <p></p>
+        <img src="/asstes/img/pink-cheeked-redhead-woman-plays-with-her-pearl-necklace-lady-classic-white-blouse-looking-down-camera 1.png" alt="mulher usando as jóias da loja">
+      </article>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+      <section></section>
+    </main>
+    <footer id="footer">
+      <section></section>
+    </footer>
   </body>
 </html>
