section sobre mim add

--- a/exercicios/projeto_001/index.html
+++ b/exercicios/projeto_001/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/asstes/css/reset.css" />
     <link rel="stylesheet" href="/asstes/css/styles.css" />
     <link rel="stylesheet" href="/asstes/css/navbar.css" />
+    <link rel="stylesheet" href="asstes/css/main.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -46,18 +47,73 @@
     </header>
     <hr />
     <main id="main">
-      <aside></aside>
-      <article class="sobre">
-        <h1></h1>
-        <p></p>
-        <img src="/asstes/img/pink-cheeked-redhead-woman-plays-with-her-pearl-necklace-lady-classic-white-blouse-looking-down-camera 1.png" alt="mulher usando as jóias da loja">
-      </article>
+      <section class="home">
+        <div class="centralizar">
+          <div class="home_texto">
+            <h1>
+              Your One-Stop Destination for Unique and Exquisite Jewelry Pieces
+            </h1>
+            <p>
+              Here, we offer various types of jewelry, including necklaces,
+              bracelets, earrings, and rings. From classic designs to modern
+              styles, we have something for everyone.
+            </p>
+          </div>
+          <div class="home_img">
+            <img
+              src="/asstes/img/pink-cheeked-redhead-woman-plays-with-her-pearl-necklace-lady-classic-white-blouse-looking-down-camera 1.png"
+              alt="mulher usando as jóias da loja"
+            />
+          </div>
+        </div>
+      </section>
+      <section class="sobre">
+        <div class="centralizar">
+            <div class="sobre_img">
+              <img src="/asstes/img/girls.png" alt="imagem das fundadoras da loja" />
+            </div>
+            <div class="sobre_texto">
+              <h1></h1>
+              <p></p>            
+            </div>
+        </div>
+      </section>
       <section></section>
       <section></section>
       <section></section>
-      <section></section>
-      <section></section>
-      <section></section>
+      <section id="table">
+        <h2>Calendário de Eventos da Joalheria</h2>
+        <table>
+          <tr>
+            <th>Data</th>
+            <th>Horário</th>
+            <th colspan="2">Eventos</th>
+          </tr>
+          <tr>
+            <td rowspan="2">01/11/2023</td>
+            <td>09:00-10:30</td>
+            <td>Workshop de Design de Joias</td>
+            <td>Workshop</td>
+          </tr>
+          <tr>
+            <td>14:00-15:30</td>
+            <td>Palestra sobre Tendências em Joias</td>
+            <td>Palestra</td>
+          </tr>
+          <tr>
+            <td rowspan="2">05/11/2023</td>
+            <td>10:30-12:00</td>
+            <td>Oficina de Ourivesaria</td>
+            <td>Workshop</td>
+          </tr>
+          <tr>
+            <td>16:00-17:30</td>
+            <td>Palestra de História da Joalheria</td>
+            <td>Palestra</td>
+          </tr>
+        </table>
+      </section>
+      <section id="form"></section>
     </main>
     <footer id="footer">
       <section></section>
