class update sobre nos

--- a/exercicios/projeto_001/index.html
+++ b/exercicios/projeto_001/index.html
@@ -48,7 +48,7 @@
     <hr />
     <main id="main">
       <section class="home">
-        <div class="centralizar">
+        <div class="home-centralizar">
           <div class="home_texto">
             <h1>
               Your One-Stop Destination for Unique and Exquisite Jewelry Pieces
@@ -58,6 +58,7 @@
               bracelets, earrings, and rings. From classic designs to modern
               styles, we have something for everyone.
             </p>
+            
           </div>
           <div class="home_img">
             <img
@@ -67,15 +68,29 @@
           </div>
         </div>
       </section>
-      <section class="sobre">
-        <div class="centralizar">
-            <div class="sobre_img">
-              <img src="/asstes/img/girls.png" alt="imagem das fundadoras da loja" />
-            </div>
-            <div class="sobre_texto">
-              <h1></h1>
-              <p></p>            
-            </div>
+      <section class="sobre_nos">
+        <div class="sobre_nos-centralizar">
+          <div class="sobre_nos_container-img">
+            <img
+              src="/asstes/img/girls.png"
+              alt="imagem das fundadoras da loja"
+            />
+          </div>
+          <div class="sobre_nos_container-texto">
+            <h2>About Us</h2>
+            <p>
+              We're a group of five friends passionate about making unique and
+              beautiful jewelry. Whether it's crafting intricate beaded
+              necklaces or designing elegant bracelets, our creativity and
+              skills shine through in every piece we create. We value
+              collaboration and work together to come up with new ideas and
+              techniques that enrich our craft. From sourcing the highest
+              quality materials to putting the finishing touches on each piece,
+              we take pride in every step of the process. At the heart of our
+              business is a genuine love for jewelry-making, and we can't wait
+              to share our passion with you.
+            </p>
+          </div>
         </div>
       </section>
       <section></section>
