base best sellers add

--- a/exercicios/projeto_001/index.html
+++ b/exercicios/projeto_001/index.html
@@ -67,10 +67,9 @@
           </div>
         </div>
       </section>
-      <section id="products">
+      <section id="best_sellers">
         <aside>
             <h2>Informações Adicionais</h2>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28056.99114459705!2d-81.46085950715756!3d28.47584585136642!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e77ef14378c49b%3A0x99df881a6a192bfe!2sOrlando%20Outlet%20Marketplace!5e0!3m2!1sen!2sbr!4v1697980391175!5m2!1sen!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <p>Este é o espaço para informações adicionais sobre o catálogo de jogos, promoções, notícias, etc.</p>
         </aside>
 
@@ -260,6 +259,8 @@
     </main>
     <footer id="footer">
       <section>
+        <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d28056.99114459705!2d-81.46085950715756!3d28.47584585136642!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x88e77ef14378c49b%3A0x99df881a6a192bfe!2sOrlando%20Outlet%20Marketplace!5e0!3m2!1sen!2sbr!4v1697980391175!5m2!1sen!2sbr" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe> -->
+
         <div>
             <h2><a href="">Shop</a></h2>
             <p><a href="">Collections</a></p>
