trendy finished and updating little things

--- a/exercicios/projeto_001/index.html
+++ b/exercicios/projeto_001/index.html
@@ -29,9 +29,9 @@
 
       <nav class="nav_main">
         <ul>
-          <li><a href="">Home</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Collection</a></li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about_us">About</a></li>
+          <li><a href="#trendy">Trendy</a></li>
           <li>
             <a href=""><i class="fa-solid fa-magnifying-glass"></i></a>
           </li>
@@ -41,14 +41,14 @@
           <li>
             <a href=""><i class="fa-solid fa-user"></i></a>
           </li>
-          <li><a href="">Contact</a></li>
+          <li><a href="#form-contact">Contact</a></li>
         </ul>
       </nav>
     </header>
     <hr />
     <main id="main">
-      <section class="home">
-        <div class="home-centralizar">
+      <section id="home">
+        <!-- <div class="home-centralizar"> -->
           <div class="home_texto">
             <h1>
               Your One-Stop Destination for Unique and Exquisite Jewelry Pieces
@@ -65,85 +65,91 @@
               alt="mulher usando as jóias da loja"
             />
           </div>
-        </div>
+        <!-- </div> -->
       </section>
-      <section id="best_sellers">
+      <section id="trendy">
         <aside>
-            <h2>Informações Adicionais</h2>
-            <p>Este é o espaço para informações adicionais sobre o catálogo de jogos, promoções, notícias, etc.</p>
+            <h3>Featured Products</h3>
+    <ul>
+        <li>
+            <a href="">
+                <img src="/asstes/img/Rectangle 15-aside.png" alt="earrings of gold">
+            </a>
+            <h4>Earrings and more</h4>
+            <p>Explore our exquisite collection of necklaces, bracelets, and more.</p>
+        </li>
+        <li>
+            <a href="">
+                <img src="/asstes/img/Rectangle 15-aside-img2.png" alt="necklaces of gold">
+            </a>
+            <h4>Especial Necklaces</h4>
+            <p>Discover unique jewelry pieces for special occasions.</p>
+        </li>
+    </ul>
+
         </aside>
 
 
           <div class="articleContainer" >
-          <h2>Best Sellers</h2>
+          <h2>Trendy</h2>
 
-      <!-- Produtos -->
+      
             <article>
               <figure>
-                <img src="/asstes/img/Rectangle 20.png" alt="golden necklaces">
+                <a href=""><img src="/asstes/img/Rectangle 20.png" alt="golden necklaces"></a>
                 <figcaption>Thin gold chain</figcaption>
               </figure>              
               <div class="price">
                 <span>$35.00 USD</span>                
               </div>
             </article>
-            <!-- <article>
-              <figure>
-                <img src="./assets/gta5.webp" alt="Imagem do Jogo 1">
-                <figcaption>Grand Theft Auto IV</figcaption>
-              </figure>
-              <div class="tag">-33%</div>
-              <div class="price">
-                <span>R$ 107,13</span>
-                <span class="oldPrice">R$ 159,00</span>
-              </div>
-            </article>
             <article>
-              <figure>
-                <img src="./assets/legoStarWars.webp" alt="Lego Star Wars: A saga skywalker">
-                <figcaption>Lego Star Wars</figcaption>
-              </figure>
-              <div class="tag">-67%</div>
-              <div class="price">
-                <span>R$ 75,89</span>
-                <span class="oldPrice">R$ 229,99</span>
-              </div>
-            </article>
-            <article>
-              <figure>
-                <img src="./assets/dragonBall.webp" alt="Dragon Ball Z: Kakarot">
-                <figcaption>Dragon Ball Z: Kakarot</figcaption>
-              </figure>
-              <div class="tag">-75%</div>
-              <div class="price">
-                <span>R$ 74,97</span>
-                <span class="oldPrice">R$ 299,90</span>
-              </div>
-            </article>
-            <article>
-              <figure>
-                <img src="./assets/civilization.jpeg" alt="Sid Meier`s Civilization VI">
-                <figcaption>Descrição do Jogo 1</figcaption>
-              </figure>
-              <div class="tag">-80%</div>
-              <div class="price">
-                <span>R$ 29,90</span>
-                <span class="oldPrice">R$ 149,50</span>
-              </div>
-            </article>
-            <article>
-              <figure>
-                <img src="./assets/turtle.webp" alt="Teenage Mutant Ninja Turtles">
-                <figcaption>Teenage Mutant Ninja Turtles</figcaption>
-              </figure>
-              <div class="tag">-30%</div>
-              <div class="price">
-                <span>R$ 87,15</span>
-                <span class="oldPrice">R$ 124,50</span>
-              </div>
-            </article> -->
+                <figure>
+                  <a href=""><img src="/asstes/img/Rectangle 21.png" alt="Shiny golden chain"></a>
+                  <figcaption>Shiny golden chain</figcaption>
+                </figure>              
+                <div class="price">
+                  <span>$80.00 USD</span>                
+                </div>
+              </article>
+              <article>
+                <figure>
+                  <a href=""><img src="/asstes/img/Rectangle 22.png" alt="gold bracelet"></a>
+                  <figcaption>Gold bracelet</figcaption>
+                </figure>              
+                <div class="price">
+                  <span>$77.00 USD</span>                
+                </div>
+              </article>
+              <article> 
+                <figure>
+                  <a href=""><img src="/asstes/img/Rectangle 23.png" alt="Eastern gold bracelet"></a>
+                  <figcaption>Eastern gold bracelet</figcaption>
+                </figure>              
+                <div class="price">
+                  <span>$58.00 USD</span>                
+                </div>
+              </article>
+              <article> 
+                <figure>
+                  <a href=""><img src="/asstes/img/Rectangle 19.png" alt="Round gold earrings"></a>
+                  <figcaption>Round gold earrings</figcaption>
+                </figure>              
+                <div class="price">
+                  <span>$47.00 USD</span>                
+                </div>
+              </article>
+              <article> 
+                <figure>
+                  <a href=""><img src="/asstes/img/Rectangle 18.png" alt="High angle golden earrings"></a>
+                  <figcaption>High angle golden earrings</figcaption>
+                </figure>              
+                <div class="price">
+                  <span>$60.00 USD</span>                
+                </div>
+              </article>
       </section>
-      <section class="about_us">
+      <section id="about_us">
         <div class="about_us-centralizar">
           <div class="about_us_container-img">
             <img
@@ -173,31 +179,31 @@
         <div class="block">
         <table>
           <tr>
-            <th>Data</th>
-            <th>Horário</th>
-            <th colspan="2">Eventos</th>
+            <th>Date</th>
+            <th>Time</th>
+            <th colspan="2">Events</th>
           </tr>
           <tr>
             <td rowspan="2">01/11/2023</td>
             <td>09:00-10:30</td>
-            <td>Workshop de Design de Joias</td>
+            <td>Jewelry Design Workshop</td>
             <td>Workshop</td>
           </tr>
           <tr>
             <td>14:00-15:30</td>
-            <td>Palestra sobre Tendências em Joias</td>
-            <td>Palestra</td>
+            <td>Lecture on Jewelry Trends</td>
+            <td>Lecture</td>
           </tr>
           <tr>
             <td rowspan="2">05/11/2023</td>
             <td>10:30-12:00</td>
-            <td>Oficina de Ourivesaria</td>
+            <td>Goldsmith Workshop</td>
             <td>Workshop</td>
           </tr>
           <tr>
             <td>16:00-17:30</td>
-            <td>Palestra de História da Joalheria</td>
-            <td>Palestra</td>
+            <td>Jewelry History Lecture</td>
+            <td>Lecture</td>
           </tr>
         </table>
     </div>
@@ -255,7 +261,7 @@
       </section>
       
       <!-- <section></section> -->
-      <section id="form"></section>
+      <!-- <section id="form"></section> -->
     </main>
     <footer id="footer">
       <section>
