--- a/exercicios/projeto_001/index.html
+++ b/exercicios/projeto_001/index.html
@@ -23,7 +23,7 @@
     <header id="main_header">
       <img
         class="logo_area"
-        src="/asstes/img/logo-luxury-black.svg"
+        src="/asstes/img/logo-luxury-black.png"
         alt="logo da Luxury"
       />
 
