changed name css to responsive

--- a/exercicios/projeto_001/index.html
+++ b/exercicios/projeto_001/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="/asstes/css/styles.css" />
     <link rel="stylesheet" href="/asstes/css/navbar.css" />
     <link rel="stylesheet" href="asstes/css/main.css" />
-    <link rel="stylesheet" href="asstes/css/reponsible.css">
+    <link rel="stylesheet" href="asstes/css/responsive.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
