--- a/exercicios/aula_011/desafio-1-modulo2/index.html
+++ b/exercicios/aula_011/desafio-1-modulo2/index.html
@@ -47,6 +47,6 @@
       
       <div class="resultado">Clique no botão</div>
 
-      <script src="index2.js"></script>
+      <script src="index.js"></script>
 </body>
 </html>
