--- a/exercicios/aula_011/desafio-1-modulo2/index.html
+++ b/exercicios/aula_011/desafio-1-modulo2/index.html
@@ -43,7 +43,7 @@
           </table>
       </div>
 
-      <button onclick="console.log(convertNumber(averageTotalRatings))">Calc Average Ratings</button>
+      <button class="botao">Calc Average Ratings</button>
       
       <div class="resultado">Clique no botão</div>
 
