feat: display none

--- a/exercicios/aula_011/desafio-1-modulo2/index.html
+++ b/exercicios/aula_011/desafio-1-modulo2/index.html
@@ -45,7 +45,7 @@
 
       <button class="botao">Calc Average Ratings</button>
       
-      <div class="resultado">Clique no botão</div>
+      <div class="resultado esconder">Clique no botão</div>
 
       <script src="index.js"></script>
 </body>
