--- a/exercicios/aula_011/desafio-1-modulo2/index.html
+++ b/exercicios/aula_011/desafio-1-modulo2/index.html
@@ -9,44 +9,45 @@
     <title>Average Rating</title>
 </head>
 <body>
-    
+    <div class="box-left">
     <div class="box">
         <table>
             <thead>
               <tr>
-                <th>Avaliação</th>
-                <th>Total de Clientes</th>
+                <th class="thead">Rating</th>
+                <th class="thead">Nº of Votes</th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <td class="estrela-1">&#9733</td>
+                <td class="estrela-1"><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i></td>
                 <td class="totalClientes-1">2</td>
               </tr>
               <tr>
-                <td class="estrela-2">&#9733&#9733</td>
+                <td class="estrela-2"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"><i class="fa-regular fa-star"></i><i class="fa-regular fa-star"></i></i></td>
                 <td class="totalClientes-2">15</td>
               </tr>
               <tr>
-                <td class="estrela-3">&#9733&#9733&#9733</td>
+                <td class="estrela-3"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"><i class="fa-regular fa-star"></i></i></td>
                 <td class="totalClientes-3">18</td>
               </tr>
               <tr>
-                <td class="estrela-4">&#9733&#9733&#9733&#9733</td>
+                <td class="estrela-4"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-regular fa-star"></i></td>
                 <td class="totalClientes-4">25</td>
               </tr>
               <tr>
-                <td class="estrela-5">&#9733&#9733&#9733&#9733&#9733</td>
+                <td class="estrela-5"><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i><i class="fa-solid fa-star"></i></i></td>
                 <td class="totalClientes-5">40</td>
               </tr>
             </tbody>
           </table>
-      </div>
-
+        </div>
       <button class="botao">Calc Average Ratings</button>
-      
+    </div>
+
       <div class="resultado esconder">Clique no botão</div>
 
       <script src="index.js"></script>
+      <script src="https://kit.fontawesome.com/4fac78be48.js" crossorigin="anonymous"></script>
 </body>
 </html>
