--- a/exercicios/aula_012/desafio 2 - modulo2/index.html
+++ b/exercicios/aula_012/desafio 2 - modulo2/index.html
@@ -6,7 +6,7 @@
     <title>Desafio 2 - Modulo 2</title>
 </head>
 <body>
-    Desafio 2 - Modulo 2
+    Desafio 2 - Modulo 2 - 2
     <script src="index.js"></script>
 </body>
 </html>
