--- a/exercicios/desafio-modulo-js-dinamico/index.html
+++ b/exercicios/desafio-modulo-js-dinamico/index.html
@@ -1,40 +1,111 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./styles.css" />
-    <link
-      href="https://pro.fontawesome.com/releases/v5.15.4/css/all.css"
-      rel="stylesheet"
-    />
-    <title>Clima Tempo</title>
-  </head>
-  <body>
-    <div class="container">
-      <form id="form_busca">
-        <label for="input_cidade">Cidade:</label>
-        <input id="input_cidade" type="text" name="text" required />
 
-        <input type="submit" value="Buscar" />
-      </form>
-      <div id="dados">
-        <div id="name_city">22</div>
-        <div id="temp">22</div>
-        <div id="temp_min">22</div>
-        <div id="temp_max">22</div>
-        <div id="humdity">22</div>
-        <div id="pressure">22</div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://pro.fontawesome.com/releases/v5.15.4/css/all.css" rel="stylesheet" />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+  <link rel="stylesheet" href="./styles.css" />
+  <title>Clima</title>
+</head>
 
-        <div id="descript_weather">Clear Sky</div>
-        <div id="descript_icon">
-            <img src="https://openweathermap.org/img/wn/02n@2x.png" alt="weather image">
+<body>
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-6">
+        <form id="form_busca">
+          <div class="input-group mb-3 mt-5">
+            <input type="text" class="form-control" placeholder="Nome da cidade" id="input_cidade" required>
+            <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Buscar</button>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="row justify-content-center d-none" id="dados">
+      <h1 id="name_city" class="text-center mb-4"></h1>
+      <div class="col-sm-6">
+        <div class="card mb-4">
+          <i class="fas fa-temperature-high text-center mt-3 icone"></i>
+          <div class="card-body">
+            <h5 class="card-title text-center">Temperatura</h5>
+            <p class="card-text text-center">
+              <div class="row">
+                <div class="col-4 text-center">
+                  <span class="fw-bold">Atual</span>
+                  <div id="temp">22</div>
+                </div>
+                <div class="col-4 text-center">
+                  <span class="fw-bold">Min</span>
+                  <div id="temp_min">22</div>
+                </div>
+                <div class="col-4 text-center">
+                  <span class="fw-bold">Max</span>
+                  <div id="temp_max">22</div>
+                </div>
+              </div>
+            </p>
+          </div>
         </div>
-        <div id="wind_deg">22</div>
-        <div id="wind_speed">22</div>
+      </div>
+      <div class="col-sm-6">
+        <div class="card mb-4">
+          <i class="fas fa-wind text-center mt-3 icone"></i>
+          <div class="card-body">
+            <h5 class="card-title text-center">Vento</h5>
+            <p class="card-text text-center">
+              <div class="row">
+                <div class="col-6 text-center">
+                  <span class="fw-bold">Dir</span>
+                  <div id="wind_deg">22</div>
+                </div>
+                <div class="col-6 text-center">
+                  <span class="fw-bold">Vel</span>
+                  <div id="wind_speed">22</div>
+                </div>
+              </div>
+            </p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card mb-4">
+          <div class="d-flex justify-content-center">
+            <div class="container_imagem">
+              <img id="descript_icon" src="https://openweathermap.org/img/wn/02n@2x.png" alt="weather image">
+            </div>
+          </div>
+          <div class="card-body">
+            <h5 class="card-title text-center">Clima</h5>
+            <p class="card-text text-center" id="descript_weather">Céu limpo</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card mb-4">
+          <i class="fas fa-dewpoint text-center mt-3 icone"></i>
+          <div class="card-body">
+            <h5 class="card-title text-center">Umidade</h5>
+            <p class="card-text text-center" id="humdity">70 %</p>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm-4">
+        <div class="card mb-4">
+          <i class="fas fa-water-lower text-center mt-3 icone"></i>
+          <div class="card-body">
+            <h5 class="card-title text-center">Pressão</h5>
+            <p class="card-text text-center" id="pressure">1200 Pa</p>
+          </div>
+        </div>
+      </div>
     </div>
-    </div>
+  </div>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
+  <script src="./script.js" defer></script>
+</body>
 
-    <script src="./script.js" defer></script>
-  </body>
 </html>
