--- a/exercicios/aula_034/protejo-vocabulario-ingles/index.html
+++ b/exercicios/aula_034/protejo-vocabulario-ingles/index.html
@@ -10,7 +10,7 @@
     <div id="container">
       <div id="game">
         <div id="life"></div>
-        <div id="points" class="hidden">Pontos: <span id="pointsValue"></span></div>
+        <div id="pointsDisplay" class="hidden">Pontos: <span id="pointsValue"></span></div>
         <div id="word"></div>
         <form>
           <label for="input_text"></label>
